# simple-network-file-system

./: .gitignore  Basic.cpp  Blocks.h  CMakeLists.txt  Client.cpp  Disk.cpp  Doxyfile  FileSys.cpp  Helper.cpp  Helper.h  README.md  Server.cpp  Shell.cpp  Shell.h  Wrapped.cpp  Wrapped.h
.github/workflows/: release.yml
header/: Basic.h  Disk.h  FileSys.h  Helper.h  Shell.h  Wrapped.h
src/: Basic.cpp  CMakeLists.txt  Disk.cpp  FileSys.cpp  Helper.cpp  Shell.cpp  Wrapped.cpp  readme.md
tests/: tests.txt
